--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,11 +1,16 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por:
+
+MICHEL MASSANET GINARD
+MANUEL IGLESIAS DEL CAMPO
 </p>
 
+Foto sólo de Michel
+<img src="/images/Michelfuerte.jpg" />
+
+La práctica se alojará en:<a href=" https://github.com/michelmassanet/quiz-2017">https://github.com/michelmassanet/quiz-2017</a>
 
 
-
-<img src="/images/lechuck.jpg" />
 
